tests/NormalTests/paczka2/big_fuzzy/91573252.err
Error in line 1: yjIVRJAwnSW S976 42,8
Error in line 4: j9CTujaWB7 A946 1,2
Error in line 3: S976 S895 15,7
Error in line 12: s3RkcR5 S976 63,4
Error in line 6: j9CTujaWB7 S895 15,6
Error in line 32: S976 S728 66,8
Error in line 33: S976 S976 76,6
Error in line 30: 7SgG S728 73,0
Error in line 43: S976 A946 29,2
Error in line 36: j9CTujaWB7 A946 92,4
Error in line 45: S976 S728 11,6
Error in line 58: 5ioYNgTQW4 S895 -1,7
Error in line 57: yjIVRJAwnSW S728 83,0
Error in line 48: 5ioYNgTQW4 S895 33,2
Error in line 69: 5ioYNgTQW4 S976 86,3
Error in line 90: 5ioYNgTQW4 A946 30,6
Error in line 96: 7SgG A946 221,4
Error in line 108: s3RkcR5 S976 26,63
Error in line 92: yjIVRJAwnSW A946 46,6
Error in line 103: S976 A946 85,4
Error in line 100: j9CTujaWB7 S895 5,3
Error in line 114: 5ioYNgTQW4 S895 70,4
Error in line 127: j9CTujaWB7 A946 3,7
Error in line 147: hVIL79j A946 18,8
Error in line 128: j9CTujaWB7 S895 89,2
Error in line 158: j9CTujaWB7 S976 -2,2
Error in line 155: 7SgG S728 13,4
Error in line 154: s3RkcR5 S976 162,3
Error in line 160: s3RkcR5 A946 12,6
Error in line 168: yjIVRJAwnSW S895 28,64
Error in line 163: s3RkcR5 S895 36,4
Error in line 156: j9CTujaWB7 S976 30,3
Error in line 175: s3RkcR5 S895 28,3
Error in line 182: S976 A946 322,0
Error in line 181: yjIVRJAwnSW S976 47,6
Error in line 191: S976 S728 8,2
Error in line 192: S976 A946 17,9
Error in line 193: 5ioYNgTQW4 S895 57,4
Error in line 208: S976 S976 48,1
Error in line 212: S976 S895 63,4
Error in line 222: yjIVRJAwnSW S728 55,5
Error in line 226: j9CTujaWB7 A946 90,0
Error in line 224: yjIVRJAwnSW S976 11,6
Error in line 240: 5ioYNgTQW4 S895 11,1
